# step8up-week6-readme-generator

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
requirements/: readme.md  screen_recording.md
src/readme_generator/: constants.py  licenses_explained.md  main.py  templates.py
