[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-generator"
version = "0.2.0"
dependencies = [
    "InquirerPy~=0.3.4",
    "rich~=14.0.0"
]
authors = [{name = "Kamil Wozniak", email = "kamil.m.wozniak@gmail.com"}]
keywords = ["README", "Generator"]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["build", "flake8", "flake8-black", "flake8-isort", "pylint", "ruff", "twine"]

[project.scripts]
generate-readme = "readme_generator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
